--- a/app/Components/Form/Components/Button/Button.module.css
+++ b/app/Components/Form/Components/Button/Button.module.css
@@ -36,7 +36,7 @@
 
 .white {
   background: var(--button-background-color--white);
-  color: rgb(var(--purple));
+  color: rgb(99, 95, 199);
 }
 
 .white:hover {
