--- a/app/Components/ViewTask/Subtask/Subtask.module.css
+++ b/app/Components/ViewTask/Subtask/Subtask.module.css
@@ -30,7 +30,7 @@
 }
 
 .check {
-  background: rgb(var(--purple));
+  background: rgb(99, 95, 199);
 }
 
 .title {
